--- a/.github/workflows/test_hello.yml
+++ b/.github/workflows/test_hello.yml
@@ -1,3 +1,7 @@
+name: Hello Test Python Versions
+
+on: push
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   hello-test-python-versions:
